--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,15 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sarala&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+:root {
+    --fontep: 'Sarala', sans-serif;
+
+    --fonteh: 'Righteous', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -20,9 +30,15 @@ body {
 }
 
 .cabeçalho > nav > a {
+    font-family: var(--fontep);
+    font-size: 18px;
     padding: 0px 30px;
     color: #FFF2E7;
+    font-weight: 100;
+}
 
+nav > a:hover{
+    text-decoration: underline;
 }
 
 .primeiro {
@@ -30,4 +46,73 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+}
+
+.parte1 {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    color: #FFF2E7;
+    font-weight: 100;
+}
+
+.parte1 > h1 {
+    font-family: var(--fonteh);
+    font-size: 50px;
+    font-weight: 100;
+}
+
+.parte1 > p {
+    font-family: var(--fontep);
+    font-size: 18px;
+}
+
+button {
+    width: 165px;
+    height: 50px;
+    background-color: #ECD6C4;
+    border-radius: 15px;
+    font-family: var(--fontep);
+    font-size: 18px;
+    color: #2F2325;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0,0,0,0.25);
+}
+
+.imagem-principal {
+    height: 400px;
+}
+
+.segundo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    color: #FFF2E7;
+    font-weight: 100;
+}
+
+.segundo > h2 {
+    font-family: var(--fonteh);
+    font-size: 22px;font-weight: 100;
+    border-top: 0.4px solid #FFF2E7;
+    padding-top: 50px;
+}
+
+.segundo > p {
+    font-family: var(--fontep);
+    font-size: 16px;
+}
+
+.rodape {
+    border-top: 0.4px solid #FFF2E7;
+    padding: 20px;
+}
+
+.imagem-rodape {
+    height: 48px;
+    display: block;
+    margin: 0px auto;
 }
