--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,8 @@
 
 body {
     background-image: linear-gradient(to right, #2F2325, #8E5D52);
-    height: 75vh;
+    min-width: 320px;
+    max-width: 100%;
 }
 
 .cabeçalho {
@@ -78,6 +79,10 @@ button {
     color: #2F2325;
     border: none;
     box-shadow: 4px 5px 4px rgba(0,0,0,0.25);
+}
+
+button:hover {
+    background-color: #a56f63;
 }
 
 .imagem-principal {
