--- a/estilo.css
+++ b/estilo.css
@@ -128,7 +128,7 @@ button:hover {
     .menu {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
     }
 
     .primeiro {
